Ensure hero title is center aligned

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -644,6 +644,8 @@ strong, b {
 .hero-title {
   font-size: 2.5rem;
   margin-bottom: 1rem;
+  text-align: center;
+  width: 100%;
   
   @media (min-width: 768px) {
     font-size: 3.5rem;
